New Book Form -Made form part of dialog modal -Added functionality to form to add a new book card -Made sure the display function only initializes the display once, and subsequently displays new cards when they're added

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ body {
     height: 2rem;
 }
 
+.dialog {
+    display: flex;
+    justify-self: center;
+    align-self: center;
+}
+
 .newbookform {
     border: 1px solid black;
     padding: 1rem;
