--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,8 @@ body {
 .bookCard div p:nth-child(2) {
     padding-left: 0.5rem;
 }
+
+.lastRow {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
